--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,14 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
+.gray {
+    color: #918E9B;
+}
+
+.bold {
+    font-weight: bold;
+}
+
 .navbar {
     box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.15);
     padding: 22px 50px;
@@ -38,4 +46,38 @@ section {
     margin: 0;
     width: 450px;
     font-size: 24px;
+}
+
+.card {
+    margin: 20px 10px 10px 20px;
+    font-size: 18px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-radius: 20px;
+    width: 250px;
+    display: inline-block;
+}
+
+.card > img {
+    width: 100%;
+    margin: 0;
+    border-radius: 20px;
+}
+
+.card--rating {
+    display: flex;
+    align-items: center;
+    margin: 0;
+}
+
+.card--rating > p {
+    margin: 0;
+}
+
+.card--rating > img {
+    height: 25px;
+    margin: 3px 10px;
+}
+
+.card > p {
+    margin: 3px 5px;
 }
