--- a/src/style.css
+++ b/src/style.css
@@ -55,6 +55,9 @@ section {
     border-radius: 20px;
     width: 250px;
     display: inline-block;
+    vertical-align: top;
+    box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.2);
+    padding: 0px 0px 5px 0px;
 }
 
 .card > img {
@@ -80,4 +83,10 @@ section {
 
 .card > p {
     margin: 3px 5px;
+}
+
+.card-row {
+    margin: 0 auto; 
+    display: table;
+    /* text-align: center; */
 }
